--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,35 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.netspook</groupId>
+    <groupId>com.github.qigele322</groupId>
     <artifactId>freemarker-code-generator</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <scm>
+        <url>https://github.com/qigele322/freemarker-code-generator</url>
+        <connection>git@github.com:qigele322/freemarker-code-generator.git</connection>
+    </scm>
+
+    <developers>
+        <developer>
+            <name>NetSpook</name>
+            <email>2668013653@qq.com</email>
+        </developer>
+    </developers>
 
     <dependencies>
         <dependency>
